prevent inputs at top of menu from getting cut off

--- a/resources/assets/css/components/menu.less
+++ b/resources/assets/css/components/menu.less
@@ -107,7 +107,7 @@
   box-sizing: content-box;
   flex: 1;
   position: relative;
-  margin-top: 10vh;
+  padding-top: 10vh;
   overflow: hidden;
   .mq_640({
     padding-top: @menu_padding;
